--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: 2;
+  z-index: -2;
 }
 
 .corona-img-bottom {
@@ -109,6 +109,10 @@
   width: 50% !important;
 }
 
+.heading-img {
+  z-index: -3;
+}
+
 .heading-text--primary {
   font-weight: bold;
   font-size: 56px;
@@ -132,6 +136,8 @@
   margin-top: 10px;
   border: none;
   border-radius: 25px;
+  text-decoration: none;
+  text-align: center;
 }
 
 .earth {
