--- a/src/components/css/MediaQuery.css
+++ b/src/components/css/MediaQuery.css
@@ -117,3 +117,17 @@
     max-width: 412px !important;
   }
 }
+
+@media only screen and (min-width: 1400px) {
+  .vaccine-container{
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .vaccine-container{
+    flex-wrap: nowrap !important;
+    overflow: scroll !important;
+  }
+}
